# embeddings-benchmark

./: .gitignore  Dockerfile  README.md  REFERENCES.md  project.yaml  pyproject.toml
.aitmpl/: context-card.md
.github/workflows/: validate.yml
.portfolio-control/: CRITICAL_PATH.md  DECISIONS.md  INVENTORY.md  QUALITY_GATES.md
benchmarks/results/: embeddings-baseline.json
data/fixtures/: corpus.jsonl  queries.jsonl
openspec/: config.yaml
openspec/artifacts/: architecture-record.md  article-draft.md  benchmark-proof.md  component-pack.md  intent.md  portfolio-impact.md  reuse-delta.md  tasks.md  verification.md  voice-check.md
openspec/changes/baseline/: proposal.md  tasks.md
openspec/changes/baseline/specs/embeddings-benchmark/: spec.md
sdd/: agent-handoff.md  architecture-decision.md  benchmark-plan.md  release-checklist.md  reuse-improvement-review.md  spec.md  technical-decision.md
src/embeddings_benchmark/: benchmark.py  cli.py  vectorizers.py
tests/: test_benchmark.py
